# solana_timely_vote_credits

./: .gitignore  Cargo.toml  README.txt  rustfmt.toml  validators_app_mainnet_beta.json
scripts/: calculate_results.sh  collate_results.sh  fetch_data.sh  fetch_validators_app_mainnet_beta.sh  process_data.sh
src/: calculate_results.rs  collate_results.rs  main.rs  process_data.rs
