[package]
name = "fetch_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "=1.0.137", features = [ "derive" ] }
serde_json = "=1.0"
solana-sdk = "=1.10.15"
solana-storage-bigtable = "=1.10.15"
solana-transaction-status = "=1.10.15"
solana-vote-program = "=1.10.15"
tokio = "=1.18.2"

[[bin]]
name = "process_data"
path = "src/process_data.rs"

[[bin]]
name = "calculate_results"
path = "src/calculate_results.rs"

[[bin]]
name = "collate_results"
path = "src/collate_results.rs"
